Fix feeder bucket cors

--- a/cdn/feeder-cdn.yml
+++ b/cdn/feeder-cdn.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Feeder bucket CDN (or really any plain S3-bucket CDN)
+  Feeder bucket CDN
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -40,8 +40,8 @@ Resources:
             ResponseCode: 404
             ResponsePagePath: /404.html
         DefaultCacheBehavior:
-          AllowedMethods: [HEAD, GET]
-          CachedMethods: [HEAD, GET]
+          AllowedMethods: [HEAD, GET, OPTIONS]
+          CachedMethods: [HEAD, GET, OPTIONS]
           Compress: false
           DefaultTTL: 86400
           ForwardedValues:
