Fix typo in Dovetail CDN template

--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -170,5 +170,5 @@ Resources:
       TreatMissingData: notBreaching
       Unit: Percent
 Outputs:
-  CloadfrontDomainName:
+  CloudFrontDomainName:
     Value: !GetAtt CloudFrontDistribution.DomainName
