Update the description of the single-origin template

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -22,7 +22,7 @@
 # }
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Creates a CloudFront distribution for web origins (i.e., not S3)
+  Creates a CloudFront distribution with a single origin (either web or S3)
 Conditions:
   HasCloudFrontDefaultRootObject: !Not [!Equals [!Ref CloudFrontDefaultRootObject, ""]]
   HasCloudFrontMinTtl: !Not [!Equals [!Ref CloudFrontMinTtl, ""]]
