Make some single-origin template outputs conditional

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -317,6 +317,8 @@ Outputs:
   CloudFrontDomainName:
     Value: !GetAtt CloudFrontDistribution.DomainName
   CloudFrontOriginAccessIdentityId:
+    Condition: HasCloudFrontOriginAccess
     Value: !Ref CloudFrontOriginAccessIdentity
   CloudFrontOriginAccessIdentityS3CanonicalUserId:
+    Condition: HasCloudFrontOriginAccess
     Value: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
