--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -107,13 +107,13 @@ Resources:
         - Type: A
           Name: !Sub media.${Domain}
           AliasTarget:
-            DNSName: d20aun7mw4so9y.cloudfront.net
+            DNSName: d3i8nuey03grxr.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub media.${Domain}
           AliasTarget:
-            DNSName: d20aun7mw4so9y.cloudfront.net
+            DNSName: d3i8nuey03grxr.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   RadiotopiaRadio:
