Add assets2.prx.org DNS records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -455,6 +455,18 @@ Resources:
           Type: CNAME
           Name: !Sub media.${Domain}
         - Type: A
+          Name: !Sub assets2.${Domain}
+          AliasTarget:
+            DNSName: dthqzwgikidi.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub assets2.${Domain}
+          AliasTarget:
+            DNSName: dthqzwgikidi.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
           Name: !Sub assets1.${Domain}
           AliasTarget:
             DNSName: d11pcyef3meeu9.cloudfront.net.
