Update media.prx.org DNS records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -449,11 +449,18 @@ Resources:
       Comment: Static assets
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
-            - media.prx.org.s3.amazonaws.com.
-          TTL: "300"
-          Type: CNAME
+        - Type: A
           Name: !Sub media.${Domain}
+          AliasTarget:
+            DNSName: dthqzwgikidi.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub media.${Domain}
+          AliasTarget:
+            DNSName: dthqzwgikidi.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
           Name: !Sub assets2.${Domain}
           AliasTarget:
