--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -464,13 +464,13 @@ Resources:
         - Type: A
           Name: !Sub assets2.${Domain}
           AliasTarget:
-            DNSName: dthqzwgikidi.cloudfront.net
+            DNSName: d3qpqdoc1119ok.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub assets2.${Domain}
           AliasTarget:
-            DNSName: dthqzwgikidi.cloudfront.net
+            DNSName: d3qpqdoc1119ok.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
