Move feeder cdn to cloudfront

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -144,6 +144,26 @@ Resources:
           AliasTarget:
             DNSName: d3lbo76wcalex1.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub f-staging.${Domain}
+          AliasTarget:
+            DNSName: d2pni491hnsr7.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub f-staging.${Domain}
+          AliasTarget:
+            DNSName: d2pni491hnsr7.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub f.${Domain}
+          AliasTarget:
+            DNSName: d32fszakr14ebp.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub f.${Domain}
+          AliasTarget:
+            DNSName: d32fszakr14ebp.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
@@ -170,13 +190,3 @@ Resources:
           TTL: "86400"
           Type: CNAME
           Name: !Sub cdn.dovetail.${Domain}
-        - ResourceRecords:
-            - cds.m3g3q4x6.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub f-staging.${Domain}
-        - ResourceRecords:
-            - cds.y9f3h4p4.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub f.${Domain}
