when adding the new dns, heroku chose a new cname

--- a/dns/prx.mx-hosted_zone.yml
+++ b/dns/prx.mx-hosted_zone.yml
@@ -33,7 +33,7 @@ Resources:
             # us-east-1 hosted zone ID
             HostedZoneId: Z3AQBSTGFYJSTF
         - ResourceRecords:
-            - remix-select.herokuapp.com.
+            - www.prx.mx.herokudns.com.
           TTL: "300"
           Type: CNAME
           Name: !Sub www.${Domain}
