Move reveal cdn

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -120,11 +120,6 @@ Resources:
           Type: CNAME
           Name: !Sub cdn-radiodiaries.${Domain}
         - ResourceRecords:
-            - cds.k6r6v2e5.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn-reveal.${Domain}
-        - ResourceRecords:
             - cds.x8b5s8y2.hwcdn.net.
           TTL: "300"
           Type: CNAME
@@ -289,11 +284,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub cdn.radiotopia.${Domain}
-        - ResourceRecords:
-            - cds.k6r6v2e5.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn.reveal.${Domain}
         - ResourceRecords:
             - cds.d9n6p3k9.hwcdn.net.
           TTL: "300"
@@ -477,6 +467,26 @@ Resources:
           Name: !Sub assets1.${Domain}
           AliasTarget:
             DNSName: d11pcyef3meeu9.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub cdn-reveal.${Domain}
+          AliasTarget:
+            DNSName: d3ojv6bn0r3eph.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub cdn-reveal.${Domain}
+          AliasTarget:
+            DNSName: d3ojv6bn0r3eph.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub cdn.reveal.${Domain}
+          AliasTarget:
+            DNSName: d3ojv6bn0r3eph.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub cdn.reveal.${Domain}
+          AliasTarget:
+            DNSName: d3ojv6bn0r3eph.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
   Prss:
     Type: "AWS::Route53::RecordSetGroup"
