Update DNS for Exchange CDN

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -466,7 +466,22 @@ Resources:
         - Type: A
           Name: !Sub assets1.${Domain}
           AliasTarget:
-            DNSName: d11pcyef3meeu9.cloudfront.net.
+            DNSName: d3qpqdoc1119ok.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub assets1.${Domain}
+          AliasTarget:
+            DNSName: d3qpqdoc1119ok.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub cdn-exchange.${Domain}
+          AliasTarget:
+            DNSName: d3qpqdoc1119ok.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub cdn-exchange.${Domain}
+          AliasTarget:
+            DNSName: d3qpqdoc1119ok.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: A
           Name: !Sub cdn-reveal.${Domain}
