Make sure S3 CORS headers are always cached in edge locations

--- a/cdn/feeder-cdn.yml
+++ b/cdn/feeder-cdn.yml
@@ -55,6 +55,9 @@ Resources:
         Origins:
           - DomainName: !Ref OriginBucket
             Id: feeder-s3-bucket
+            OriginCustomHeaders:
+              - HeaderName: Origin
+                HeaderValue: !Ref DistributionDomain
             S3OriginConfig: {}
         PriceClass: PriceClass_200
         ViewerCertificate:
