Update descriptions in Tower template

--- a/stacks/tower.radiotopia.fm.yml
+++ b/stacks/tower.radiotopia.fm.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: File upload Lambda function
+Description: Radiotopia Radio API
 Conditions:
   CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
@@ -99,7 +99,7 @@ Resources:
                               episodes.append(episode)
 
               return episodes
-      Description: Radiotopia Radio API Lambda function
+      Description: Radiotopia Radio API v2
       Handler: lambda_function.lambda_handler
       MemorySize: 128
       Role: !GetAtt TowerLambdaIamRole.Arn
