Upgrade staging ecs

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -68,11 +68,11 @@ Mappings:
     Staging:
       InstanceType: t2.small
       InstanceStorage: 22
-      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2017.09.k-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
-      MaxSize: "10"
+      MaxSize: "20"
     Production:
       InstanceType: m4.large
       InstanceStorage: 72
