Fix DNS for tower.radiotopia.fm

--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -137,13 +137,13 @@ Resources:
         - Type: A
           Name: !Sub tower.${Domain}
           AliasTarget:
-            DNSName: d2bc6y52zdgbr8.cloudfront.net
+            DNSName: doerrhbe4q1bo.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
         - Type: AAAA
           Name: !Sub tower.${Domain}
           AliasTarget:
-            DNSName: d2bc6y52zdgbr8.cloudfront.net
+            DNSName: doerrhbe4q1bo.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Legacy:
