Move allusionist to cloudfront

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -70,11 +70,6 @@ Resources:
           Type: CNAME
           Name: !Sub cdn-99percentinvisible.${Domain}
         - ResourceRecords:
-            - cds.v9m6r2v6.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn-allusionist.${Domain}
-        - ResourceRecords:
             - cds.d7n9t9b9.hwcdn.net.
           TTL: "300"
           Type: CNAME
@@ -194,11 +189,6 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub cdn.transistor.${Domain}
-        - ResourceRecords:
-            - cds.v9m6r2v6.hwcdn.net.
-          TTL: "300"
-          Type: CNAME
-          Name: !Sub cdn.allusionist.${Domain}
         - ResourceRecords:
             - cds.a7h7m5v4.hwcdn.net.
           TTL: "300"
@@ -502,6 +492,26 @@ Resources:
           Name: !Sub cdn.reveal.${Domain}
           AliasTarget:
             DNSName: d3ojv6bn0r3eph.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub cdn-allusionist.${Domain}
+          AliasTarget:
+            DNSName: d2ay8vht0p7hxt.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub cdn-allusionist.${Domain}
+          AliasTarget:
+            DNSName: d2ay8vht0p7hxt.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub cdn.allusionist.${Domain}
+          AliasTarget:
+            DNSName: d2ay8vht0p7hxt.cloudfront.net.
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub cdn.allusionist.${Domain}
+          AliasTarget:
+            DNSName: d2ay8vht0p7hxt.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
   Prss:
     Type: "AWS::Route53::RecordSetGroup"
