Enable static site deploy role

--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -16,37 +16,37 @@ Resources:
   Temp:
     Type: "AWS::SNS::Topic"
   # ## S3 static site deploy
-  # S3StaticSiteDeployIamRole:
-  #   Type: "AWS::IAM::Role"
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Effect: "Allow"
-  #           Principal:
-  #             Service:
-  #               - "lambda.amazonaws.com"
-  #           Action:
-  #             - "sts:AssumeRole"
-  #     Path: "/"
-  #     Policies:
-  #       - PolicyName: S3SyncPolicy
-  #         PolicyDocument:
-  #           Version: "2012-10-17"
-  #           Statement:
-  #             - Effect: Allow
-  #               Action:
-  #                 - "s3:PutObject"
-  #               Resource:
-  #                 - "*"
-  #             - Effect: Allow
-  #               Action:
-  #                 - "s3:GetObject"
-  #                 - "s3:GetObjectVersion"
-  #               Resource:
-  #                 - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
-  #     ManagedPolicyArns:
-  #       - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  S3StaticSiteDeployIamRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      Policies:
+        - PolicyName: S3SyncPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:PutObject"
+                Resource:
+                  - "*"
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   # S3StaticSiteDeployFunction:
   #   Type: "AWS::Lambda::Function"
   #   Properties:
