--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -13,8 +13,6 @@ Parameters:
   EnvironmentType:
     Type: String
 Resources:
-  Temp:
-    Type: "AWS::SNS::Topic"
   # ## S3 static site deploy
   S3StaticSiteDeployIamRole:
     Type: "AWS::IAM::Role"
@@ -47,27 +45,27 @@ Resources:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
-  # S3StaticSiteDeployFunction:
-  #   Type: "AWS::Lambda::Function"
-  #   Properties:
-  #     Code:
-  #       S3Bucket:
-  #         Fn::ImportValue:
-  #           !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
-  #       S3Key: utility/s3-static-site-deploy.zip
-  #     Description: Deploys the contents of a zip archive to an S3 bucket
-  #     Handler: lambda_function.lambda_handler
-  #     MemorySize: 256
-  #     Role: !GetAtt S3StaticSiteDeployIamRole.Arn
-  #     Runtime: python3.6
-  #     Tags:
-  #       - Key: Project
-  #         Value: Infrastructure
-  #       - Key: "prx:cloudformation:stack-name"
-  #         Value: !Ref AWS::StackName
-  #       - Key: "prx:cloudformation:stack-id"
-  #         Value: !Ref AWS::StackId
-  #     Timeout: 60
+  S3StaticSiteDeployFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: utility/s3-static-site-deploy.zip
+      Description: Deploys the contents of a zip archive to an S3 bucket
+      Handler: lambda_function.lambda_handler
+      MemorySize: 256
+      Role: !GetAtt S3StaticSiteDeployIamRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 60
   # # Static site stacks
   # RadiotopiaRadioStack:
   #   Type: "AWS::CloudFormation::Stack"
