Pass additional params to static site root stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -223,7 +223,10 @@ Resources:
       Parameters:
         InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
         InfrastructureNotificationsStackName: !Ref NotificationsStackName
+        InfrastructureGitCommit: !Ref InfrastructureGitCommit
         EnvironmentType: !Ref EnvironmentType
+        RadiotopiaRadioArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
+        BetaPrxOrgArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
