--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -10,7 +10,13 @@ Parameters:
     Type: String
   InfrastructureNotificationsStackName:
     Type: String
+  InfrastructureGitCommit:
+    Type: String
   EnvironmentType:
+    Type: String
+  RadiotopiaRadioArchiveS3ObjectVersion:
+    Type: String
+  BetaPrxOrgArchiveS3ObjectVersion:
     Type: String
 Resources:
   # ## S3 static site deploy
