--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -72,48 +72,48 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       Timeout: 60
-  # # Static site stacks
-  # RadiotopiaRadioStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
-  #     Parameters:
-  #       CodeS3Bucket:
-  #         Fn::ImportValue:
-  #           !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-  #       StaticSiteArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
-  #       StaticSiteS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
-  #       StaticSiteS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
-  #       EnvironmentType: !Ref EnvironmentType
-  #       S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
-  #     Tags:
-  #       - Key: "prx:cloudformation:stack-name"
-  #         Value: !Ref AWS::StackName
-  #       - Key: "prx:cloudformation:stack-id"
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/static-sites/radio.radiotopia.fm.yml"]]
-  #     TimeoutInMinutes: "5"
-  # BetaPrxOrgStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
-  #     Parameters:
-  #       CodeS3Bucket:
-  #         Fn::ImportValue:
-  #           !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-  #       StaticSiteArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
-  #       StaticSiteS3StagingDeployBucket: "/prx/stag/beta.prx.org/DEPLOY_S3_BUCKET"
-  #       StaticSiteS3ProductionDeployBucket: "/prx/prod/beta.prx.org/DEPLOY_S3_BUCKET"
-  #       EnvironmentType: !Ref EnvironmentType
-  #       S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
-  #     Tags:
-  #       - Key: "prx:cloudformation:stack-name"
-  #         Value: !Ref AWS::StackName
-  #       - Key: "prx:cloudformation:stack-id"
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/static-sites/beta.prx.org.yml"]]
-  #     TimeoutInMinutes: "5"
+  # Static site stacks
+  RadiotopiaRadioStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        StaticSiteArchiveS3ObjectVersion: !Ref RadiotopiaRadioArchiveS3ObjectVersion
+        StaticSiteS3StagingDeployBucket: "/prx/stag/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+        StaticSiteS3ProductionDeployBucket: "/prx/prod/radio.radiotopia.fm/DEPLOY_S3_BUCKET"
+        EnvironmentType: !Ref EnvironmentType
+        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/static-sites/radio.radiotopia.fm.yml"]]
+      TimeoutInMinutes: "5"
+  BetaPrxOrgStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        StaticSiteArchiveS3ObjectVersion: !Ref BetaPrxOrgArchiveS3ObjectVersion
+        StaticSiteS3StagingDeployBucket: "/prx/stag/beta.prx.org/DEPLOY_S3_BUCKET"
+        StaticSiteS3ProductionDeployBucket: "/prx/prod/beta.prx.org/DEPLOY_S3_BUCKET"
+        EnvironmentType: !Ref EnvironmentType
+        S3StaticSiteDeployFunctionArn: !GetAtt S3StaticSiteDeployFunction.Arn
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/static-sites/beta.prx.org.yml"]]
+      TimeoutInMinutes: "5"
