Cycle static sites stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -214,7 +214,7 @@ Resources:
           Value: !Ref AWS::StackId
       Timeout: 60
   # Root stacks
-  StaticSitesRootStack:
+  StaticSitesStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
