--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -190,6 +190,10 @@ Resources:
         InfrastructureNotificationsStackName: !Ref NotificationsStackName
         TemplateUrlPrefix: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/serverless/"]]
         EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        WildcardCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        UploadLambdaCodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
