--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -14,7 +14,40 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
+  WildcardCertificateArn:
+    Type: String
+  PRXUploadAccessKey:
+    Type: String
+  UploadLambdaCodeS3ObjectVersion:
+    Type: String
 Resources:
+  UploadLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        WildcardCertificateArn: !Ref WildcardCertificateArn
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "upload.prx.org.yml"]]
+      TimeoutInMinutes: "5"
   RadiotopiaTowerStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
