Proxy also needs the top level domain

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -166,6 +166,12 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt ProxyRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
+  ProductionRedirectRestApiDomainName:
+    Type: "AWS::ApiGateway::DomainName"
+    Condition: CreateProductionResources
+    Properties:
+      CertificateArn: !Ref WildcardCertificateArn
+      DomainName: prx.org
   ProductionRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
     Condition: CreateProductionResources
