Have proxy just create its own certs

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -16,29 +16,51 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  WildcardCertificateArn:
-    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
       DomainName: "proxy.test.prx.tech"
       HostedZoneName: "prx.tech."
+      ValidationDomain: "prx.tech"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.test.prx.tech"
       PrxSessionKey: "_prx_session_test"
     Staging:
       DomainName: "proxy.staging.prx.tech"
       HostedZoneName: "prx.tech."
+      ValidationDomain: "prx.tech"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.staging.prx.tech"
       PrxSessionKey: "_prx_session_staging"
     Production:
       DomainName: "proxy.prx.org"
       HostedZoneName: "prx.org."
+      ValidationDomain: "prx.org"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.prx.org"
       PrxSessionKey: "_prx_session"
 Resources:
+  Certificate:
+    Type: "AWS::CertificateManager::Certificate"
+    Properties:
+      DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+      DomainValidationOptions:
+        - ValidationDomain: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ValidationDomain]
+          DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+      SubjectAlternativeNames:
+        - "prx.org"
+        - "www.prx.org"
+      Tags:
+        - Key: Project
+          Value: Corporate
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub ProxyPrxOrg-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ProxyLambdaIamRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -142,7 +164,7 @@ Resources:
   ProxyRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
     Properties:
-      CertificateArn: !Ref WildcardCertificateArn
+      CertificateArn: !Ref Certificate
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
   ProxyRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
@@ -170,13 +192,13 @@ Resources:
     Type: "AWS::ApiGateway::DomainName"
     Condition: CreateProductionResources
     Properties:
-      CertificateArn: !Ref WildcardCertificateArn
+      CertificateArn: !Ref Certificate
       DomainName: prx.org
   ProductionRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
     Condition: CreateProductionResources
     Properties:
-      CertificateArn: !Ref WildcardCertificateArn
+      CertificateArn: !Ref Certificate
       DomainName: www.prx.org
   ProductionRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
