--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -52,7 +52,7 @@ Resources:
         - "www.prx.org"
       Tags:
         - Key: Project
-          Value: Corporate
+          Value: proxy.prx.org
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
@@ -96,7 +96,7 @@ Resources:
       Timeout: 30
       Tags:
         - Key: Project
-          Value: Corporate
+          Value: proxy.prx.org
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
