Need a base path mapping for prx.org

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -194,6 +194,13 @@ Resources:
     Properties:
       CertificateArn: !Ref Certificate
       DomainName: prx.org
+  ProductionRedirectRestApiBasePathMapping:
+    Type: "AWS::ApiGateway::BasePathMapping"
+    Condition: CreateProductionResources
+    Properties:
+      DomainName: !Ref ProductionRedirectRestApiDomainName
+      RestApiId: !Ref ProxyRestApi
+      Stage: prod
   ProductionRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
     Condition: CreateProductionResources
