--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -345,17 +345,27 @@ Resources:
             - "199.119.122.237"
           TTL: "300"
           Type: A
-          Name: !Ref Domain
-        - ResourceRecords:
-            - "199.119.122.237"
-          TTL: "300"
-          Type: A
           Name: !Sub exchange.${Domain}
-        - ResourceRecords:
-            - "199.119.122.237"
-          TTL: "300"
-          Type: A
+        - Type: A
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d2349stnozhk8u.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Ref Domain
+          AliasTarget:
+            DNSName: d2349stnozhk8u.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
           Name: !Sub www.${Domain}
+          AliasTarget:
+            DNSName: d1o7ngosfkig2o.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub www.${Domain}
+          AliasTarget:
+            DNSName: d1o7ngosfkig2o.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
   DotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
