Smaller prod instance type

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -74,7 +74,7 @@ Mappings:
       WarningThreshold: "9"
       MaxSize: "20"
     Production:
-      InstanceType: m4.large
+      InstanceType: t2.medium
       InstanceStorage: 72
       AmiName: "amzn-ami-2017.09.k-amazon-ecs-optimized"
       MinSize: "4"
