--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -115,7 +115,8 @@ Mappings:
   ECSReservationMap:
     Staging:
       BackendCpu: 128
-      BackendMemory: 650
+      BackendMemory: 1000
+      BackendMemoryReservation: 500
       FrontendCpu: 64
       FrontendMemory: 200
       DovetailCpu: 128
@@ -124,7 +125,8 @@ Mappings:
       DovetailNginxMemory: 400
     Production:
       BackendCpu: 200
-      BackendMemory: 1400
+      BackendMemory: 2000
+      BackendMemoryReservation: 1000
       FrontendCpu: 100
       FrontendMemory: 400
       DovetailCpu: 700
@@ -403,6 +405,7 @@ Resources:
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
       Tags:
         - Key: "prx:cloudformation:stack-name"
@@ -445,6 +448,7 @@ Resources:
         JingleEcrImageTag: !Ref JingleEcrImageTag
         JingleSecretsVersion: !Ref JingleSecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
       Tags:
         - Key: "prx:cloudformation:stack-name"
@@ -556,6 +560,7 @@ Resources:
         CreateWorker: "true"
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       Tags:
@@ -602,6 +607,7 @@ Resources:
         CreateWorker: "true"
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/"
       Tags:
@@ -650,6 +656,7 @@ Resources:
         DesiredWorkersProduction: 1
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       Tags:
@@ -742,6 +749,7 @@ Resources:
         CreateWorker: "true"
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1"
       Tags:
@@ -788,6 +796,7 @@ Resources:
         CreateWorker: "false"
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
+        ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
         HealthCheckPath: "/api/v1/certs"
       Tags:
