--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -4,6 +4,7 @@ Description: >
 Conditions:
   CreateWorkerResources: !Equals [!Ref CreateWorker, true]
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+  HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -68,6 +69,9 @@ Parameters:
   ContainerMemory:
     Type: String
     Default: 500
+  ContainerMemoryReservation:
+    Type: String
+    Default: ""
   ContainerCpu:
     Type: String
     Default: 128
@@ -181,6 +185,7 @@ Resources:
               awslogs-group: !Ref WebLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
+          MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
           Name: !Sub ${AppName}-web
           PortMappings:
             - HostPort: 0
@@ -249,6 +254,7 @@ Resources:
               awslogs-group: !Ref WorkerLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
+          MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
           Name: !Sub ${AppName}-worker
           Command:
             - worker
